Fix up layout of extended patient fields

--- a/app/views/renalware/patients/show/_generic_person.html.slim
+++ b/app/views/renalware/patients/show/_generic_person.html.slim
@@ -7,5 +7,5 @@
     dt Telephone:
     dd= person.telephone
 
-  b #{title} Address
+  b Address
   = render partial: "renalware/addresses/address", locals: { address: person.address } if person.address
