--- a/app/views/renalware/patients/_form.html.slim
+++ b/app/views/renalware/patients/_form.html.slim
@@ -96,4 +96,4 @@
 
     .large-6.columns
       = render partial: 'renalware/patients/person_form_fields',
-          locals: { patient: patient, title: "Distinct Nurse", document_attribute: :distinct_nurse }
+          locals: { patient: patient, title: "District Nurse", document_attribute: :distinct_nurse }
