--- a/app/views/renalware/patients/show/_patient_demographics.html.slim
+++ b/app/views/renalware/patients/show/_patient_demographics.html.slim
@@ -33,6 +33,12 @@
         dt Marital Status
         dd= @patient.marital_status
 
+        dt Language
+        dd= @patient.language.name
+
+        dt Religion
+        dd= @patient.religion.name
+
     .large-3.columns
       dl
         dt Date of Birth:
