Make display more friendly to missing values

--- a/app/views/renalware/patients/show/_patient_demographics.html.slim
+++ b/app/views/renalware/patients/show/_patient_demographics.html.slim
@@ -34,10 +34,10 @@
         dd= @patient.marital_status
 
         dt Language
-        dd= @patient.language.name
+        dd= @patient.language
 
         dt Religion
-        dd= @patient.religion.name
+        dd= @patient.religion
 
     .large-3.columns
       dl
