Tweak "Referral" field set label

--- a/app/views/renalware/patients/show/_referral.html.slim
+++ b/app/views/renalware/patients/show/_referral.html.slim
@@ -1,4 +1,4 @@
-= field_set_tag "Referral" do
+= field_set_tag "Referral Info" do
   dl
     dt Referring Physician Name:
     dd= patient.document.referral.referring_physician_name
