--- a/app/views/renalware/clinics/appointments/index.html.slim
+++ b/app/views/renalware/clinics/appointments/index.html.slim
@@ -16,6 +16,18 @@
       = f.submit "Filter", class: "button"
 
 .row
+    b Pathology Request Forms:
+    = form_tag pathology_forms_path, method: :post do |f|
+      - patient_ids.each do |patient_id|
+        = hidden_field_tag "patient_ids[]", patient_id
+
+      / TODO: Remove these two hidden fields once PR #549 is merged
+      = hidden_field_tag "clinic_id", 13
+      = hidden_field_tag "doctor_id", 1
+
+      = submit_tag "Generate for all patients in this list (including all pages)", class: "button"
+
+.row
   table#appointments
     thead
       tr
