--- a/app/views/renalware/pathology/forms/index.html.slim
+++ b/app/views/renalware/pathology/forms/index.html.slim
@@ -1,28 +1,14 @@
 .row
   h4 Pathology Request CRS Form Preview
+
 .row
   .large-4.columns
-    = form_tag pathology_forms_path, method: :get do
-      - patients.each do |patient|
-        = hidden_field_tag "patient_ids[]", patient.id
-      .row
-        .large-6.columns
-          label Consultant User ID:
-        .large-6.columns
-          = select_tag :user_id, options_from_collection_for_select(@users, :id, :full_name, @user.id), include_blank: true
-      .row
-        .large-6.columns
-          label Clinic:
-        .large-6.columns
-          = select_tag :clinic_id, options_from_collection_for_select(@clinics, :id, :name, @clinic.id), include_blank: true
-      .row
-        .large-6.columns
-          label Telephone #:
-        .large-6.columns
-          = text_field_tag :telephone, telephone
-      .row
-        .large-3.offset-9.columns
-          = submit_tag "Update Forms", class: "button"
+    = simple_form_for request_form_options, url: pathology_forms_path, as: :request_form_options, method: :get do |f|
+      = f.input :patient_ids, as: :hidden_array
+      = f.input :clinic_id, collection: request_form_options.all_clinics, input_html: { class: "small-input" }
+      = f.input :user_id, collection: request_form_options.all_users, label_method: :full_name, input_html: { class: "small-input" }
+      = f.input :telephone, input_html: { class: "small-input" }
+      = f.button :submit, "Update Forms"
 
 hr.page_break
 
