update form preview form to be POST instead of GET

--- a/app/views/renalware/clinics/appointments/index.html.slim
+++ b/app/views/renalware/clinics/appointments/index.html.slim
@@ -19,11 +19,7 @@
     b Pathology Request Forms:
     = form_tag pathology_forms_path, method: :post do |f|
       - patient_ids.each do |patient_id|
-        = hidden_field_tag "patient_ids[]", patient_id
-
-      / TODO: Remove these two hidden fields once PR #549 is merged
-      = hidden_field_tag "clinic_id", 13
-      = hidden_field_tag "doctor_id", 1
+        = hidden_field_tag "request_form_options[patient_ids][]", patient_id
 
       = submit_tag "Generate for all patients in this list (including all pages)", class: "button"
 
