--- a/app/views/renalware/patients/_side_nav.html.slim
+++ b/app/views/renalware/patients/_side_nav.html.slim
@@ -25,8 +25,7 @@ ul.side-nav
   li.divider
   li.heading Bookmark
   - if @patient_is_bookmarked
-    = simple_form_for @patient.bookmarks.new, url: patient_bookmarks_path(patient_id: @patient.id), method: :delete do |f|
-      li.ink = link_to "Remove from Bookmarks", "#", data: { behaviour: "submit" }
+    / TODO: Have a "Remove bookmark" link
   - else
     = simple_form_for @patient.bookmarks.new, url: patient_bookmarks_path(patient_id: @patient.id) do |f|
       li.link= link_to "Bookmark this patient", "#", data: { behaviour: "submit" }
