respond to PR feedback

--- a/app/views/renalware/patients/_side_nav.html.slim
+++ b/app/views/renalware/patients/_side_nav.html.slim
@@ -23,7 +23,7 @@ ul.side-nav
   - else
     li.link= link_to "Recipient Summary", patient_transplants_recipient_dashboard_path(@patient)
   li.divider
-  li.heading Bookmark
+  li.heading Options
   - if @bookmark.present?
     / TODO: Have a "Remove bookmark" link
   - else
