--- a/app/views/renalware/clinics/clinic_visits/_clinic_visit.html.slim
+++ b/app/views/renalware/clinics/clinic_visits/_clinic_visit.html.slim
@@ -1,6 +1,6 @@
 tr
   td
-    = link_to 'Create Letter', new_clinic_visit_letter_path(clinic_visit)
+    = link_to 'Create Letter', new_patient_letters_letter_path(@patient, clinic_visit_id: clinic_visit.id)
     = pipe_separator
     = link_to 'Edit', edit_patient_clinic_visit_path(patient_id: clinic_visit.patient.to_param, id: clinic_visit.to_param)
     = pipe_separator
