--- a/app/views/renalware/clinics/clinic_visits/index.html.slim
+++ b/app/views/renalware/clinics/clinic_visits/index.html.slim
@@ -1,13 +1,2 @@
 = render layout: "renalware/patients/layout", locals: { title: "Clinic Visits" } do
-  table.clinics
-    thead
-      tr
-        th
-        th Date
-        th Clinic Type
-        th BMI
-        th BP
-        th Created by
-
-    tbody
-      = render @clinic_visits
+  = render "table", clinic_visits: @clinic_visits
