--- a/app/views/renalware/clinics/clinic_visits/_clinic_visit.html.slim
+++ b/app/views/renalware/clinics/clinic_visits/_clinic_visit.html.slim
@@ -1,12 +1,4 @@
-tr
-  td
-    = link_to_create_or_edit_clinic_visit_letter(@patient, clinic_visit)
-    = pipe_separator
-    = link_to 'Edit', edit_patient_clinic_visit_path(patient_id: clinic_visit.patient.to_param, id: clinic_visit.to_param)
-    = pipe_separator
-    = link_to 'Delete', patient_clinic_visit_path(patient_id: clinic_visit.patient.to_param, id: clinic_visit.to_param), method: :delete
-  td.date-time= l clinic_visit.date
-  td.clinic-type= clinic_visit.clinic
-  td.bmi= clinic_visit.bmi
-  td.bp= clinic_visit.bp
-  td.created-by= clinic_visit.created_by.to_s
+.document-view
+  = render "renalware/shared/attributes_group",
+      legend: "Clinic Visit", destination: "event",
+      models: { clinic_visit => [:date, :clinic, :bp, :notes] }
