--- a/app/views/renalware/patients/_side_nav.html.slim
+++ b/app/views/renalware/patients/_side_nav.html.slim
@@ -24,8 +24,12 @@ ul.side-nav
     li.link= link_to "Recipient Summary", patient_transplants_recipient_dashboard_path(@patient)
   li.divider
   li.heading Options
-  - if find_user_bookmark_for_patient(@patient).present?
-    / TODO: Have a "Remove bookmark" link
+  - bookmark = find_user_bookmark_for_patient(@patient)
+  - if bookmark.present?
+    = simple_form_for bookmark,
+        url: bookmark_path(id: bookmark.id),
+        method: :delete do |f|
+      li.link= link_to "Remove from bookmarks", "#", data: { behaviour: "submit" }
   - else
     = simple_form_for @patient.bookmarks.new, url: patient_bookmarks_path(patient_id: @patient.id) do |f|
       li.link= link_to "Bookmark this patient", "#", data: { behaviour: "submit" }
