--- a/app/views/renalware/clinics/clinic_visits/_table_row.html.slim
+++ b/app/views/renalware/clinics/clinic_visits/_table_row.html.slim
@@ -2,9 +2,9 @@ tr
   td
     = link_to_clinic_visit_letter(@patient, clinic_visit)
     = pipe_separator
-    = link_to 'Edit', edit_patient_clinic_visit_path(patient_id: clinic_visit.patient.to_param, id: clinic_visit.to_param)
+    = link_to 'Edit', edit_patient_clinic_visit_path(@patient, clinic_visit)
     = pipe_separator
-    = link_to 'Delete', patient_clinic_visit_path(patient_id: clinic_visit.patient.to_param, id: clinic_visit.to_param), method: :delete
+    = link_to 'Delete', patient_clinic_visit_path(@patient, clinic_visit), method: :delete
   td.date-time= l clinic_visit.date
   td.clinic-type= clinic_visit.clinic
   td.bmi= clinic_visit.bmi
