--- a/app/views/renalware/clinics/clinic_visits/_table_row.html.slim
+++ b/app/views/renalware/clinics/clinic_visits/_table_row.html.slim
@@ -9,4 +9,4 @@ tr
   td.clinic-type= clinic_visit.clinic
   td.bmi= clinic_visit.bmi
   td.bp= clinic_visit.bp
-  td.created-by= clinic_visit.created_by.to_s
+  td.created-by= clinic_visit.created_by
