--- a/app/views/renalware/letters/letters/_navigation.html.slim
+++ b/app/views/renalware/letters/letters/_navigation.html.slim
@@ -1,3 +1,3 @@
 dl.sub-nav
-  dd= link_to 'List', patient_letters_letters_path(@patient)
-  dd= link_to 'Add Letter', new_patient_letters_letter_path(@patient)
+  dd= link_to "List", patient_letters_letters_path(@patient)
+  dd= link_to "Draft Letter", new_patient_letters_letter_path(@patient)
