Display a description of the event in the header

--- a/app/views/renalware/letters/letters/show.html.slim
+++ b/app/views/renalware/letters/letters/show.html.slim
@@ -18,6 +18,8 @@
           = l @letter.issued_on
           br
           span.letter-description= @letter.description
+          br
+          = @letter.event_description
 
         p.letter-private Private and confidential
 
