Implements listing current medications in the UI

--- a/app/views/renalware/letters/letters/show.html.slim
+++ b/app/views/renalware/letters/letters/show.html.slim
@@ -45,6 +45,9 @@
           = render "patient_summary", patient: @letter.patient
 
     .row
+      = render @letter.parts
+
+    .row
       .columns.large-12
         .letter-body
           = simple_format @letter.body
