--- a/app/assets/stylesheets/renalware/modules/letters.scss
+++ b/app/assets/stylesheets/renalware/modules/letters.scss
@@ -101,6 +101,16 @@
     li {
       line-height: 1.2em;
     }
+
+    &.inline {
+      display: block;
+      margin-top: 20px;
+
+      li {
+        display: inline;
+        padding-right: 15px;
+      }
+    }
   }
 
   .letter-allergies {
