Show additional visit observations in the letter form

--- a/app/views/renalware/clinics/clinic_visits/_clinic_visit.html.slim
+++ b/app/views/renalware/clinics/clinic_visits/_clinic_visit.html.slim
@@ -1,4 +1,4 @@
 .document-view
   = render "renalware/shared/attributes_group",
       legend: "Clinic Visit", destination: "event",
-      models: { clinic_visit => [:date, :clinic, :bp, :notes] }
+      models: { clinic_visit => [:date, :clinic, :bp, :bmi, :urine_blood, :urine_protein, :notes] }
