--- a/app/views/renalware/pathology/forms/create.html.slim
+++ b/app/views/renalware/pathology/forms/create.html.slim
@@ -6,7 +6,9 @@
     = simple_form_for request_form_options, url: pathology_forms_path, as: :request_form_options do |f|
       = f.input :patient_ids, as: :hidden_array
       = f.input :clinic_id, collection: request_form_options.all_clinics, input_html: { class: "small-input" }
-      = f.input :user_id, collection: request_form_options.all_users, label_method: :full_name, input_html: { class: "small-input" }
+      = f.input :consultant_id,
+        collection: request_form_options.all_consultants,
+        label_method: :full_name, input_html: { class: "small-input" }
       = f.input :telephone, input_html: { class: "small-input" }
       = f.button :submit, "Update Forms"
 
