--- a/app/assets/stylesheets/renalware/modules/letters.scss
+++ b/app/assets/stylesheets/renalware/modules/letters.scss
@@ -105,6 +105,7 @@
     &.inline {
       display: block;
       margin-top: 20px;
+      margin-left: 15px;
 
       li {
         display: inline;
