--- a/app/views/renalware/letters/parts/_clinical_observations.html.slim
+++ b/app/views/renalware/letters/parts/_clinical_observations.html.slim
@@ -3,5 +3,5 @@ ul.letter-list.inline
   li= inline_value("Weight", clinical_observations.weight, "kg")
   li= inline_value("Height", clinical_observations.height, "m")
   li= inline_value("BMI", clinical_observations.bmi)
-  li= inline_value("Urine Blood", clinical_observations.urine_blood)
-  li= inline_value("Urine Protein", clinical_observations.urine_protein)
+  li= inline_value("Urine Blood", clinical_observations.urine_blood.try!(:text))
+  li= inline_value("Urine Protein", clinical_observations.urine_protein.try!(:text))
