--- a/app/views/renalware/letters/parts/_current_medications.html.slim
+++ b/app/views/renalware/letters/parts/_current_medications.html.slim
@@ -1,6 +1,7 @@
-p
-  strong Current Medications
+.columns.large-12
+  .letter-list
+    h3 Current Medications
 
-ul
-  - current_medications.each do |medication|
-    li= medication.drug.name
+    ul
+      - current_medications.each do |medication|
+        li= medication.drug.name
