Include problem notes in the letter

--- a/app/assets/stylesheets/renalware/modules/letters.scss
+++ b/app/assets/stylesheets/renalware/modules/letters.scss
@@ -111,6 +111,13 @@
         padding-right: 15px;
       }
     }
+
+    ol {
+      list-style-type: lower-latin;
+      font-size: 0.9em;
+      margin-bottom: 0;
+      margin-left: 30px;
+    }
   }
 
   .letter-allergies {
