--- a/app/views/renalware/letters/parts/_problems.html.slim
+++ b/app/views/renalware/letters/parts/_problems.html.slim
@@ -3,5 +3,9 @@
     h3 Problems
 
     ul
-      - problems.each do |problem|
+      - problems.ordered.each do |problem|
         li= problem.description
+        - if problem.notes.present?
+          ol
+            - problem.notes.each do |note|
+              li= note.description
