--- a/app/assets/stylesheets/renalware/modules/letters.scss
+++ b/app/assets/stylesheets/renalware/modules/letters.scss
@@ -104,8 +104,7 @@
 
     &.inline {
       display: block;
-      margin-top: 20px;
-      margin-left: 15px;
+      margin: 0;
 
       li {
         display: inline;
