--- a/app/views/renalware/letters/parts/_recent_pathology_results.html.slim
+++ b/app/views/renalware/letters/parts/_recent_pathology_results.html.slim
@@ -1,7 +1,8 @@
 p
   strong Recent Pathology Results
 
-ul
+p
   - recent_pathology_results[1..-1].each do |observation|
     - description, result, date = observation
-    li #{date}: #{description} #{result}
+    span #{date}: #{description} #{result};
+
