Order and style the parts

--- a/app/views/renalware/letters/parts/_recent_pathology_results.html.slim
+++ b/app/views/renalware/letters/parts/_recent_pathology_results.html.slim
@@ -1,11 +1,12 @@
-p
-  strong Recent Pathology Results
+.columns.large-12
+  .letter-list
+    h3 Recent Investigations
 
-p
-  - recent_pathology_results.each do |pathology_result|
-    - description, observation, date = pathology_result
-    - if observation.result.present?
-      span #{date}: #{description} #{observation.result};
-    - else
-      span &nbsp; #{description};
+    p
+      - recent_pathology_results.each do |pathology_result|
+        - description, observation, date = pathology_result
+        - if observation.result.present?
+          span #{date}: #{description} #{observation.result};
+        - else
+          span &nbsp; #{description};
 
