--- a/app/views/renalware/dashboard/bookmarks/_table.html.slim
+++ b/app/views/renalware/dashboard/bookmarks/_table.html.slim
@@ -3,11 +3,12 @@ table.auto-layout
     tr
       th
       th Name
-      th Local Patient ID
+      th Hosp No
+      th DOB
       th Age
       th Sex
       th Modality
-      th Date Bookmarked
+      th Bookmarked
       th
 
   tbody
