--- a/app/views/renalware/medications/_index.html.slim
+++ b/app/views/renalware/medications/_index.html.slim
@@ -1,6 +1,7 @@
 b Current
 #medications
   = render "renalware/medications/table",
+      id: "current_medications",
       patient: patient,
       treatable: treatable,
       medications: current_medications,
@@ -8,10 +9,10 @@ b Current
       include_terminated_column: false
 
 b Historical
-#historical_medications
-  = render "renalware/medications/table",
-      patient: patient,
-      treatable: treatable,
-      medications: historical_medications,
-      search: historical_search,
-      include_terminated_column: true
+= render "renalware/medications/table",
+    id: "historical_medications",
+    patient: patient,
+    treatable: treatable,
+    medications: historical_medications,
+    search: historical_search,
+    include_terminated_column: true
