fix acceptance tests for perionitis episodes & exit site infections

--- a/app/views/renalware/medications/index.js.erb
+++ b/app/views/renalware/medications/index.js.erb
@@ -1,1 +1,1 @@
-<%= refresh("#medications", partial: "table", locals: local_assigns) %>
+<%= refresh("#medications", partial: "tables", locals: local_assigns) %>
