--- a/app/views/renalware/medications/_index.html.slim
+++ b/app/views/renalware/medications/_index.html.slim
@@ -1,18 +1,2 @@
-b Current
 #medications
-  = render "renalware/medications/table",
-      id: "current_medications",
-      patient: patient,
-      treatable: treatable,
-      medications: current_medications,
-      search: current_search,
-      include_terminated_column: false
-
-b Historical
-= render "renalware/medications/table",
-    id: "historical_medications",
-    patient: patient,
-    treatable: treatable,
-    medications: historical_medications,
-    search: historical_search,
-    include_terminated_column: true
+  = render "renalware/medications/tables", local_assigns
